--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
             function stopTimer() {
                 ipcRenderer.send('stop-coundown-timer');
+                document.getElementById('stopTimer').className += ' hidden';
             }
 
             function closeApp() {
@@ -17,40 +18,69 @@
             function startTimer(minutes) {
                 ipcRenderer.send('start-coundown-timer', minutes);
                 remote.getCurrentWindow().hide();
+                document.getElementById('stopTimer').className = document.getElementById('stopTimer').className.replace('hidden', '');
             }
         </script>
     </head>
     <body>
         <div class="container-fluid">
-            <div class="row" style="margin-top: 15px;">
+            <div class="row" style="margin-top: 10px; padding-bottom: 10px; border-bottom: solid 1px #DCDCDC;">
                 <div class="col-xs-6">
                     <a
-                        class="btn btn-default"
+                        class="btn btn-primary"
                         href="#"
                         onclick="startTimer(25)"
+                        style="width: 100%;"
                     > Start 25:00 </a>
                 </div>
                 <div class="col-xs-6">
                     <a
-                        class="btn btn-default"
+                        class="btn btn-primary"
                         href="#"
                         onclick="startTimer(5)"
+                        style="width: 100%;"
                     > Start 5:00 </a>
                 </div>
             </div>
-            <div class="row" style="margin-top: 35px;">
-                <div class="col-md-offset-1 col-xs-3">
+            <div class="row" style="margin-top: 10px;  padding-bottom: 10px; border-bottom: solid 1px #DCDCDC;">
+                <div class="col-xs-12">
+                    <p>Choose your time</p>
+                </div>
+                <div class="col-xs-6" style="padding-top:4px;">
+                    <input
+                        style="width: 100px;"
+                        class="form-control input-lg"
+                        id="customTime"
+                        type="number"
+                        value="5"
+                        min="1"
+                    /></label>
+                </div>
+                <div class="col-xs-6">
                     <a
+                        class="btn btn-default"
+                        href="#"
+                        onclick="startTimer(document.getElementById('customTime').value)"
+                        style="width: 100%;"
+                    > Start </a>
+                </div>
+            </div>
+            <div class="row" style="margin-top: 15px;">
+                <div class="col-xs-6">
+                    <a
+                        id="stopTimer"
                         href="#"
                         onclick="stopTimer()"
-                        class="btn btn-danger"
+                        class="btn btn-warning hidden"
+                        style="width: 100%;"
                     > Stop timer </a>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-6">
                     <a
                         href="#"
                         onclick="closeApp()"
                         class="btn btn-danger"
+                        style="width: 100%;"
                     > Quit app</a>
                 </div>
             </div>
