Better name and custom time cta

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="row" style="margin-top: 10px;  padding-bottom: 10px; border-bottom: solid 1px #DCDCDC;">
                 <div class="col-xs-12">
-                    <p>Choose your time</p>
+                    <p>How many minutes?</p>
                 </div>
                 <div class="col-xs-6" style="padding-top:4px;">
                     <input
