Add License, updates README, simplify stop timer button, move fonts to local files

--- a/done.html
+++ b/done.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+        <link href='css/fonts.css' rel='stylesheet' type='text/css'>
         <title>Done</title>
         <script type="text/javascript">
             var ipcRenderer = require('electron').ipcRenderer;
